Changelog
=========


1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2015-01-21)
------------------

- Fix broken pipe error when connections are closed early by the client.
  [jone]


1.0.1 (2014-03-21)
------------------

- Ignore virtualHostMonster configuartions in paths.
  [jone]


1.0.0 (2014-03-21)
------------------

- Initial implementation.
  [jone]