@@ -5,7 +5,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Allow setting a different listening address as optional parameter. Default is still localhost. pass an empty string to listen to all addresses on a host.
+  [fredvd]
 
 
 1.0.2 (2015-01-21)
